syntax = "proto3";

package collector;

service collectorService {
  rpc GetAvailableCollectors (collectorsRequest) returns (collectorsResponse);
  rpc UpdateCollector (UpdateCollectorRequest) returns (UpdateCollectorResponse);
}

message collectorsRequest {
  string serviceAreaId = 1;
}

message collectorsResponse {
  bool success = 1;
  repeated Collector collectors = 2;
}

message Collector {
  string id = 1;
  string collectorId = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  string availabilityStatus = 6;
  int32 currentTasks = 7;
  int32 maxCapacity = 8;
}

message UpdateCollectorRequest {
  string id = 1;
  int32 currentTasks = 2;
  string availabilityStatus = 3;
}

message UpdateCollectorResponse {
  bool success = 1;
  string message = 2;
}


